# Nmap Changelog ($Id$); -*-text-*-

o [Nsock] Added new poll and kqueue engines. [Henri Doreau]

o [Zenmap] Corrected some typos in the Japanese translation.
  [OKANO Takayoshi]

o Changed the CPE for Linux from cpe:/o:linux:kernel to
  cpe:/o:linux:linux_kernel to reflect deprecation in the official CPE
  dictionary.

o Fixed a bug that caused an incorrect source address to be set when
  scanning certain addresses (apparently those ending in .0) on
  Windows XP. The symptom of this bug was the messages
    get_srcaddr: can't connect socket: The requested address is not valid in its context.
    Failed to convert source address to presentation format!?!  Error: Unknown error
  Thanks to Robert Washam and Jorge Hernandez for reports and help
  debugging. [David Fifield]

o Added some additional CPE entries to nmap-service-probes.
  [Dillon Graham]

o Enabled support for IPv6 traceroute using UDP, SCTP, and IPProto
  (Next Header) probes. [David Fifield]

o Fixed an assertion failure with IPv6 traceroute trying to use an
  unsupported protocol:
    nmap: traceroute.cc:749: virtual unsigned char*
    UDPProbe::build_packet(const sockaddr_storage*, u32*) const: Assertion
    `source->ss_family == 2' failed.
  This was reported by Pierre Emeriaud. [David Fifield]

o [NSE] Added oracle-brute-stealth which exploits CVE-2012-3137, a weakness
  in the Oracle O5LOGIN authentication scheme. [Dhiru Kholia]

o Scans that use OS sockets (including TCP connect scan, version
  detection, and script scan) now use the SO_BINDTODEVICE sockopt on
  Linux, so that the -e option is honored. [David Fifield]

o Upgraded the included OpenSSL to version 1.0.1c. [David Fifield]

o Moved some Windows dependencies, including OpenSSL, libsvn, and the
  vcredist files, into a new public Subversion directory
  /nmap-mswin32-aux. This reduces the size of source code
  distributions for users who don't need these files. Those who build